--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "ejs": "^3.1.6",
     "eslint": "^8.9.0",
     "express": "^4.17.2",
+    "firebase": "^8.10.1",
     "firebase-admin": "^10.0.2",
-    "firebase-functions": "^3.19.0",
+    "firebase-functions": "^3.20.1",
+    "firestore": "^1.1.6",
     "nodemon": "^2.0.15",
     "sass": "^1.49.7"
   },
